--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "dev:2": "pnpm -F ./containers/vue2 dev",
     "dev:27": "pnpm -F ./containers/vue2.7 dev",
     "dev:3": "pnpm -F ./containers/vue3 dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esno ./scripts/build.ts",
+    "clean": "rimraf --glob ./**/node_modules ./**/dist dist node_modules"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.4.5",
+    "consola": "^3.2.3",
+    "esno": "^0.17.0",
+    "fast-glob": "^3.3.1",
+    "fs-extra": "^11.1.1",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.27.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vue": "~2.6.14",
