--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vue-uni-component",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "packageManager": "pnpm@8.6.7",
   "scripts": {
     "dev:2": "pnpm -F ./containers/vue2 dev",
     "dev:27": "pnpm -F ./containers/vue2.7 dev",
