feat: add utils package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:3": "pnpm -F ./containers/vue3 dev",
     "dev:cdn": "pnpm -F ./cdn-playground dev",
     "build": "esno ./scripts/build.ts",
+    "build:rollup": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c",
     "clean": "rimraf --glob ./**/node_modules ./**/dist dist node_modules"
   },
   "keywords": [],
@@ -19,11 +20,14 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.4.5",
     "consola": "^3.2.3",
+    "cross-env": "^7.0.3",
+    "esbuild-register": "^3.4.2",
     "esno": "^0.17.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vue": "~2.6.14",
