--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "@vue-uni-ui/components",
+  "name": "@vue-uni-component/utils",
   "version": "1.0.0",
   "description": "",
-  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@vue-uni-component/utils": "workspace:^"
-  }
+  "license": "MIT"
 }
