--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vue-uni-component/utils",
-  "version": "1.0.0",
+  "name": "@vue-uni-ui/utils",
+  "version": "0.0.1-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
