--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,11 +2,16 @@
   "name": "@vue-uni-ui/utils",
   "version": "0.0.1-beta.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "./index.mjs",
   "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "author": "X-sky",
+  "license": "MIT",
+  "module": "./index.mjs",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.cjs",
+      "import": "./index.js"
+    }
+  }
 }
