chore: extract common vite config

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,12 +6,16 @@
   "keywords": [],
   "author": "X-sky",
   "license": "MIT",
+  "jsdelivr": "./index.iife.min.js",
+  "unpkg": "./index.iife.min.js",
   "module": "./index.mjs",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
       "types": "./index.d.ts",
       "require": "./index.cjs",
-      "import": "./index.js"
-    }
+      "import": "./index.mjs"
+    },
+    "./*": "./*"
   }
 }
