--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.5",
     "bumpp": "^9.1.1",
     "consola": "^3.2.3",
@@ -27,6 +28,7 @@
     "esno": "^0.17.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
+    "lodash": "^4.17.21",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
