--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "esno ./scripts/build.ts",
     "build:rollup": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c",
     "release": "bumpp",
+    "create:ui": "esno ./scripts/cli/createComp.ts",
     "clean": "rimraf --glob ./**/node_modules ./**/dist dist node_modules"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.5",
+    "@types/prompts": "^2.4.4",
     "bumpp": "^9.1.1",
     "consola": "^3.2.3",
     "cross-env": "^7.0.3",
@@ -29,6 +31,7 @@
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
+    "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
