--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rimraf": "^5.0.1",
     "rollup": "^3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
+    "sass": "^1.65.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vue": "~2.6.14",
