--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.0",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.197",
+    "@types/lodash-es": "^4.17.8",
     "@types/node": "^20.4.5",
     "@types/prompts": "^2.4.4",
     "bumpp": "^9.1.1",
@@ -30,7 +32,7 @@
     "esno": "^0.17.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.0",
