--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.0",
     "@types/fs-extra": "^11.0.1",
+    "@types/lodash": "^4.14.197",
     "@types/lodash-es": "^4.17.8",
     "@types/node": "^20.4.5",
     "@types/prompts": "^2.4.4",
