build(package): change container package type to module

--- a/containers/v2.7/package.json
+++ b/containers/v2.7/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "pre": "vue-demi-switch 2 vue2",
     "dev": "pnpm pre && vite",
