--- a/package.json
+++ b/package.json
@@ -35,16 +35,22 @@
     "lodash-es": "^4.17.21",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
-    "rollup": "^3.27.0",
+    "rollup": "~3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "sass": "^1.65.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7",
+    "vite": "~4.4.7",
     "vue": "~2.6.14",
     "vue2": "npm:vue@2.7.14",
     "vue3": "npm:vue@3.2.47"
   },
   "dependencies": {
     "vue-demi": "^0.14.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "vue-demi": "$vue-demi",
+      "vite": "$vite"
+    }
   }
 }
