--- a/containers/v2.7/package.json
+++ b/containers/v2.7/package.json
@@ -6,9 +6,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "pre": "vue-demi-switch 2 vue2",
-    "dev": "pnpm pre && vite",
-    "build": "pnpm pre && vite build"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
