--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,16 @@
     "rootDirs": ["."],
     "baseUrl": ".",
     "paths": {
+      "@vue-uni-ui/*": ["./packages/*"],
       "~/*": ["./*"]
     }
   },
   "include": [
     "packages/**/*.vue",
     "packages/**/*.ts",
-    "containers/**/*.vue",
-    "containers/**/*.ts",
     "meta",
     "scripts",
-    "utils"
-  ],
-  "exclude": ["node_modules", "**/*.md", "**/dist"]
+    "utils",
+    "types"
+  ]
 }
