--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dev:cdn": "pnpm -F ./cdn-playground dev",
     "build": "esno ./scripts/build.ts",
     "build:rollup": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c",
+    "ui:create": "esno ./scripts/components/create.ts",
+    "ui:remove": "esno ./scripts/components/remove.ts",
     "release": "bumpp",
-    "create:ui": "esno ./scripts/cli/createComp.ts",
     "clean": "rimraf --glob ./**/node_modules ./**/dist dist node_modules"
   },
   "keywords": [],
-  "author": "",
+  "author": "ttse",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.0",
@@ -35,12 +36,12 @@
     "lodash-es": "^4.17.21",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
-    "rollup": "^3.27.0",
+    "rollup": "~3.27.0",
     "rollup-plugin-esbuild": "^5.0.0",
     "sass": "^1.65.1",
     "typescript": "^5.1.6",
     "vite": "~4.4.7",
-    "vue": "~3.2.47"
+    "vue": "3.2.47"
   },
   "dependencies": {
     "vue-demi": "^0.14.5"
