chore(deps): change containers' deps from @vue-uni-ui/components to @vue-uni-ui/components-test

--- a/containers/v2.7/package.json
+++ b/containers/v2.7/package.json
@@ -16,7 +16,7 @@
     "@vitejs/plugin-vue2": "^2.2.0"
   },
   "dependencies": {
-    "@vue-uni-ui/components": "workspace:^",
+    "@vue-uni-ui/components-test": "workspace:^",
     "vue": "^2.7.14"
   }
 }
