--- a/containers/v3/package.json
+++ b/containers/v3/package.json
@@ -7,13 +7,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/test-utils": "^2.4.3"
   },
   "dependencies": {
     "@vue-uni-ui/components-test": "workspace:^",
