--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ui:create": "esno ./scripts/components/create.ts",
     "ui:remove": "esno ./scripts/components/remove.ts",
     "release": "bumpp",
-    "clean": "rimraf --glob ./**/node_modules ./**/dist dist node_modules"
+    "clean": "rimraf --glob ./**/dist ./**/node_modules",
+    "test:3": "pnpm -F ./containers/v3 test"
   },
   "keywords": [],
   "author": "ttse",
@@ -25,6 +26,7 @@
     "@types/lodash-es": "^4.17.8",
     "@types/node": "^20.4.5",
     "@types/prompts": "^2.4.4",
+    "@vue/test-utils": "^2.4.3",
     "bumpp": "^9.1.1",
     "consola": "^3.2.3",
     "cross-env": "^7.0.3",
@@ -32,6 +34,7 @@
     "esno": "^0.17.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
+    "jsdom": "^23.0.1",
     "lodash-es": "^4.17.21",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
@@ -40,6 +43,7 @@
     "sass": "^1.65.1",
     "typescript": "^5.1.6",
     "vite": "~5.0.10",
+    "vitest": "^1.1.0",
     "vue": "3.2.47"
   },
   "dependencies": {
